[feat] Lang translations changes

--- a/src/locales/pl_PL/pl_PL.json
+++ b/src/locales/pl_PL/pl_PL.json
@@ -33,13 +33,13 @@
         "title": "Coś poszło nie tak..."
     },
     "cross_device_intro": {
-        "button_primary": "Zdobądź swój zabezpieczony link ",
+        "button_primary": "Link weryfikacyjny",
         "list_accessibility": "Dalsze kroki weryfikacji na urządzeniu mobilnym",
-        "list_item_finish": "Zaznacz tutaj w celu zakończenia procesu",
-        "list_item_open_link": "Otwórz link i dokończ zadania ",
-        "list_item_send_phone": "Wyślij zabezpieczony link na twój telefon ",
-        "subtitle": "Tutaj jak to zrobić: ",
-        "title": "Kontynuuj na swoim telefonie"
+        "list_item_finish": "Kliknij w przycisk w celu zakończenia procesu weryfikacji",
+        "list_item_open_link": "Otwórz link i przejdź proces weryfikacji",
+        "list_item_send_phone": "Wyślij link weryfikujący na swój telefon",
+        "subtitle": "",
+        "title": "Kontynuuj proces weryfikacji na swoim telefonie"
     },
     "cross_device_return": {
         "body": "Aktualizacja na twoim komputerze może zając kilka sekund ",
@@ -85,32 +85,32 @@
         "button_government_letter": "List Rządowy",
         "button_government_letter_detail": "List Rządowy",
         "button_id": "Dokument tożsamości",
-        "button_id_detail": "Przód i tył ",
+        "button_id_detail": "",
         "button_license": "Prawo jazdy ",
-        "button_license_detail": "Przód i tył",
+        "button_license_detail": "",
         "button_passport": "Paszport",
-        "button_passport_detail": "Strona z twoim zdjęciem twarzy ",
+        "button_passport_detail": "",
         "button_permit": "Pozwolenie na pobyt stały ",
-        "button_permit_detail": "Przód i tył ",
+        "button_permit_detail": "",
         "button_tax_letter": "List z Urzędu Skarbowego",
         "extra_estatements_ok": "Zaakceptowano e-dokumenty",
         "extra_no_mobile": "Przepraszamy, brak rachunków za telefon komórkowy",
         "list_accessibility": "Dokumenty, których możesz użyć do weryfikacji tożsamości",
-        "subtitle": "To musi być oficjalne zdjęcie dowodu",
+        "subtitle": "",
         "subtitle_poa": "To są dokumenty, które najprawdopodobniej pokazują twoje aktualne miejsce zamieszkania",
-        "title": "Wybierz dokument",
+        "title": "Wybierz dokument tożsamości",
         "title_poa": "Wybierz %{country} dokumentu"
     },
     "doc_submit": {
-        "button_link_upload": "albo wgraj zdjęcie – bez skanów i kserokopii ",
+        "button_link_upload": "albo wgraj zdjęcie z komputera",
         "button_primary": "Kontynuuj na telefonie",
-        "subtitle": "Zrób zdjęcie telefonem",
+        "subtitle": "",
         "title_bank_statement": "Prześlij oświadczenie",
         "title_benefits_letter": "Prześlij list ",
         "title_bill": "Prześlij rachunek",
         "title_government_letter": "List",
         "title_id_back": "Prześlij dowód tożsamości (tył)",
-        "title_id_front": "Prześlij dowód tożsamości (przód)",
+        "title_id_front": "Prześlij zdjęcie dokumentu tożsamości",
         "title_license_back": "Prześlij prawo jazdy (tył)",
         "title_license_front": "Prześlij prawo jazdy (przód)",
         "title_passport": "Wgraj stronę paszportu ze zdjęciem",
@@ -185,7 +185,7 @@
         "info_qr_how_list_item_download": "Jeżeli nie działa, pobierz skaner kodów QR z Google Play lub App Store",
         "link_divider": "lub",
         "link_qr": "Skanuj kod QR",
-        "link_sms": "Zdobądź link SMS",
+        "link_sms": "Wyślij link przez SMS",
         "link_url": "Kopiuj link",
         "loader_sending": "Wysyłanie",
         "number_field_input_placeholder": "Wprowadź numer telefonu",
@@ -193,7 +193,7 @@
         "subtitle_qr": "Zeskanuj kod QR swoim telefonem",
         "subtitle_sms": "Wyślij jednorazowy link na swój telefon",
         "subtitle_url": "Otwórz link na swoim telefonie",
-        "title": "Zdobądź swój zabezpieczony link",
+        "title": "Link weryfikacyjny",
         "url_field_label": "Skopiuj link do swojej przeglądarki na telefonie"
     },
     "linked_computer": {
