[fix] Fix some translations

--- a/src/locales/pl_PL/pl_PL.json
+++ b/src/locales/pl_PL/pl_PL.json
@@ -84,7 +84,7 @@
         "button_bill_detail": "Gaz, prąd, woda, Gas, electricity, water, telefon stacjonarny lub internet",
         "button_government_letter": "List Rządowy",
         "button_government_letter_detail": "List Rządowy",
-        "button_id": "Dokument tożsamości",
+        "button_id": "Dowód osobisty",
         "button_id_detail": "",
         "button_license": "Prawo jazdy ",
         "button_license_detail": "",
@@ -109,8 +109,8 @@
         "title_benefits_letter": "Prześlij list ",
         "title_bill": "Prześlij rachunek",
         "title_government_letter": "List",
-        "title_id_back": "Prześlij dowód tożsamości (tył)",
-        "title_id_front": "Prześlij zdjęcie dokumentu tożsamości",
+        "title_id_back": "Prześlij zdjęcie dokumentu tożsamości (tył)",
+        "title_id_front": "Prześlij zdjęcie dokumentu tożsamości (przód)",
         "title_license_back": "Prześlij prawo jazdy (tył)",
         "title_license_front": "Prześlij prawo jazdy (przód)",
         "title_passport": "Wgraj stronę paszportu ze zdjęciem",
