[fix] Fix translations

--- a/src/locales/pl_PL/pl_PL.json
+++ b/src/locales/pl_PL/pl_PL.json
@@ -60,7 +60,7 @@
         "body_bank_statement": "Upewnij się, że zdjęcie nie jest prześwietlone ani rozmazane, a wszystkie szczegóły są możliwe do odczytania",
         "body_benefits_letter": "Upewnij się, że zdjęcie nie jest prześwietlone ani rozmazane, a wszystkie szczegóły są możliwe do odczytania",
         "body_bill": "Upewnij się, że zdjęcie nie jest prześwietlone ani rozmazane, a wszystkie szczegóły są możliwe do odczytania",
-        "body_id": " Upewnij się, że zdjęcie twojej karty nie jest prześwietlone ani rozmazane, a wszystkie szczegóły są możliwe do odczytania",
+        "body_id": " Upewnij się, że zdjęcie twojego dokumentu nie jest prześwietlone ani rozmazane, a wszystkie szczegóły są możliwe do odczytania",
         "body_image_medium": "Cały proces wydłuży się jeżeli nie będziemy mogli tego odczytać",
         "body_image_poor": "Do szybkiej weryfikacji potrzebujemy lepszego zdjęcia",
         "body_license": "Upewnij się, że szczegóły twojego prawa jazdy są wyraźnie widoczne",
